# sta-baseline

./: .gitignore  AGENTS.md  README.md  ego4d_data.dvc  pyproject.toml
.dvc/: config
.github/: copiilot-instructions.md
docs/: download_data.md  system_architecture.md
script/: dump_frame_to_lmdb_files.py
src/sta_baseline/datasets/: short_term_anticipation.py
src/sta_baseline/evaluation/: sta_evaluate.py
tests/: conftest.py  test_evaluation.py  test_lmdb_dump.py
